[package]
name = "reloader"
version = "0.1.0"
edition = "2021"

[features]
default = ["debug"]
debug = ["objparse/debug"]

[dependencies]
ntapi = { version = "0.4.0", features = ["impl-default"] }
object = "0.30.0"
objparse = { git = "https://github.com/Ben-Lichtman/objparse.git", version = "0.1.0" }
# objparse = { path = "../objparse" }
wchar = "0.11.0"

[dependencies.windows-sys]
version = "0.42.0"
features = ["Win32_Foundation", "Win32_System_SystemServices", "Win32_System_Memory", "Win32_System_LibraryLoader"]
